# app/swagger/swagger.yaml
@@ -177,6 +177,86 @@ definitions:
       updatedAt:
         type: string
     type: object
+  host.DevopsCmdbHost:
+    properties:
+      checked:
+        description: 是否验证过
+        type: boolean
+      configureInfo:
+        description: 配置信息
+        type: string
+      createdAt:
+        type: string
+      groups:
+        items:
+          $ref: '#/definitions/host.DevopsCmdbHostGroup'
+        type: array
+      id:
+        description: 主键
+        type: integer
+      ip:
+        description: 主机Ip
+        type: string
+      name:
+        description: 主机名
+        type: string
+      port:
+        description: 主机ssh端口
+        type: integer
+      remark:
+        description: 主机描述
+        type: string
+      sort:
+        description: 排序标记
+        type: integer
+      status:
+        description: 主机的状态
+        type: string
+      systemInfo:
+        description: 系统信息
+        type: string
+      updatedAt:
+        type: string
+      user:
+        description: 用户名
+        type: string
+    type: object
+  host.DevopsCmdbHostGroup:
+    properties:
+      children:
+        description: 主机数量
+        items:
+          $ref: '#/definitions/host.DevopsCmdbHostGroup'
+        type: array
+      createdAt:
+        type: string
+      enable:
+        description: 分组状态
+        type: boolean
+      hostNum:
+        description: 主机数量
+        type: integer
+      hosts:
+        items:
+          $ref: '#/definitions/host.DevopsCmdbHost'
+        type: array
+      id:
+        description: 主键
+        type: integer
+      name:
+        description: 分组名
+        type: string
+      parentId:
+        type: integer
+      remark:
+        description: 分组的描述
+        type: string
+      sort:
+        description: 排序
+        type: integer
+      updatedAt:
+        type: string
+    type: object
   menu.DevopsSysMenu:
     properties:
       badge:
@@ -191,9 +271,6 @@ definitions:
         type: string
       createdAt:
         type: string
-      defaultMenu:
-        description: 是否是基础路由（开发中）
-        type: boolean
       dot:
         description: 是否dot
         type: boolean
@@ -250,9 +327,6 @@ definitions:
         type: string
       createdAt:
         type: string
-      defaultMenu:
-        description: 是否是基础路由（开发中）
-        type: boolean
       dot:
         description: 是否dot
         type: boolean
@@ -901,6 +975,48 @@ definitions:
         description: wechat
         type: string
     type: object
+  request.SearchHostParams:
+    properties:
+      children:
+        description: 主机数量
+        items:
+          $ref: '#/definitions/host.DevopsCmdbHostGroup'
+        type: array
+      createdAt:
+        type: string
+      desc:
+        description: 排序方式:升序false(默认)|降序true
+        type: boolean
+      enable:
+        description: 分组状态
+        type: boolean
+      hostNum:
+        description: 主机数量
+        type: integer
+      hosts:
+        items:
+          $ref: '#/definitions/host.DevopsCmdbHost'
+        type: array
+      id:
+        description: 主键
+        type: integer
+      name:
+        description: 分组名
+        type: string
+      orderKey:
+        description: 排序
+        type: string
+      parentId:
+        type: integer
+      remark:
+        description: 分组的描述
+        type: string
+      sort:
+        description: 排序
+        type: integer
+      updatedAt:
+        type: string
+    type: object
   request.SearchIconParams:
     properties:
       createdAt:
@@ -1000,9 +1116,6 @@ definitions:
         type: string
       createdAt:
         type: string
-      defaultMenu:
-        description: 是否是基础路由（开发中）
-        type: boolean
       desc:
         description: 排序方式:升序false(默认)|降序true
         type: boolean
@@ -1426,6 +1539,81 @@ info:
   title: Swagger Devops API
   version: 0.0.1
 paths:
+  /base/ws:
+    get:
+      consumes:
+      - application/json
+      description: 获得全局通用ws
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/response.Response'
+      security:
+      - ApiKeyAuth: []
+      summary: 获得全局通用ws
+      tags:
+      - Ws
+  /cmdb/host/group/tree:
+    get:
+      consumes:
+      - application/json
+      description: 获得主机分组树接口
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/response.Response'
+      security:
+      - ApiKeyAuth: []
+      summary: 获得主机分组树接口
+      tags:
+      - Menu
+  /cmdb/host/list:
+    post:
+      consumes:
+      - application/json
+      description: 获得主机列表接口
+      parameters:
+      - description: 页数，页大小，筛选条件
+        in: body
+        name: data
+        required: true
+        schema:
+          $ref: '#/definitions/request.SearchHostParams'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/response.Response'
+      security:
+      - ApiKeyAuth: []
+      summary: 获得主机列表接口
+      tags:
+      - Menu
+  /cmdb/host/shell:
+    get:
+      consumes:
+      - application/json
+      description: 获得主机终端调试接口
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/response.Response'
+      security:
+      - ApiKeyAuth: []
+      summary: 获得主机终端调试接口
+      tags:
+      - Menu
   /sys/api/add:
     post:
       consumes:
